--- a/pet/index.html
+++ b/pet/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- 页面增加icon图标 -->
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" rel="external nofollow" />
-    <title>猫咪领养平台</title>
+    <title>猫语</title>
 </head>
 
 <body>
